--- a/css/app.css
+++ b/css/app.css
@@ -138,7 +138,7 @@ ul#contacts, ul.stack-list {
 
 .jcarousel ul {
     overflow: hidden;
-    width: 200%;
+    width: 15000px;
     position: relative;
     list-style: none;
     margin: 0;
