--- a/css/app.css
+++ b/css/app.css
@@ -137,8 +137,7 @@ ul#contacts, ul.stack-list {
 }
 
 .jcarousel ul {
-    overflow: hidden;
-    width: 15000px;
+    width: 300%;
     position: relative;
     list-style: none;
     margin: 0;
