--- a/css/app.css
+++ b/css/app.css
@@ -3,31 +3,23 @@
 #main {
   width: 85%;
   margin: auto;
-  background-color: rgba(255,255,255, .45);
+  background-color: rgba(255,255,255, .25);
   height: 100%;
   color: white;
-
 }
 
-#top-wrapper {
-  position: relative;
-
-}
-
-#left-top {
-  position: relative;
-  float: left;
-  max-width: 30%;
-  margin-left: 3%;
-}
-
-#right-top {
+#top-left {
+  vertical-align: bottom;
   position: relative;
   padding-left: 1%;
+  text-align: center;
+  float: left;
+
+}
+
+#top-right {
   text-align: left;
-  float: right;
-  max-width: 60%;
-  margin-right: 4%;
+  margin: 5%;
 }
 
 /*section dividers*/
@@ -36,7 +28,7 @@
   box-shadow: 0px 8px 10px -6px black;
   width: 100%;
   clear:both;
-  margin-top: 5%;
+  margin-top: 2%;
   padding-top: 3%;  
   padding-bottom: 3%;
   background-color: rgba(47,79,79, 1);
@@ -106,7 +98,7 @@
 #bg {
   max-width: 100%;
   max-height: 100%;
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 img#me {
@@ -139,6 +131,7 @@ ul#contacts, ul.stack-list {
 }
 
 .jcarousel ul {
+  margin: auto;
   width: 300%;
   position: relative;
   list-style: none;
@@ -148,6 +141,7 @@ ul#contacts, ul.stack-list {
 
 .jcarousel li {
   position: relative;
+  max-width: 100%;
   overflow: hidden;
   float: left;
   text-align: center;
@@ -161,6 +155,7 @@ body {
   font-size: 1em;
   font-family: 'Abel', sans-serif;
 }
+
 
 img {border-radius: 1%; padding: 5px;}
 
