--- a/css/app.css
+++ b/css/app.css
@@ -3,9 +3,9 @@
 #main {
   width: 85%;
   margin: auto;
-  background-color: rgba(255,255,255, .25);
+  background-color: rgba(255,255,255, .45);
   height: 100%;
-  color: white;
+  color: black;
 }
 
 #top-left {
@@ -83,8 +83,6 @@
   vertical-align: top;
   width: 17%;
 }
-
-#portfolio-content {max-width: 60%; margin: auto;}
 
 .app-img {
   -moz-box-shadow:    2px 3px 5px 1px black;
