--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 /*main containers*/
 
 #main {
-  width: 85%;
+  width: 70%;
   margin: auto;
   background-color: rgba(255,255,255, .45);
   height: 100%;
@@ -54,7 +54,7 @@
   width: 100%;
   height: 7%;
   font-size: 1.5em;
-  font-family: 'Abel', sans-serif;
+  font-family: 'Lato', sans-serif;
   position: fixed;
   list-style:none;
   margin:0;
@@ -151,9 +151,14 @@ body {
   text-align: center;
   color: white;
   font-size: 1em;
-  font-family: 'Abel', sans-serif;
+  font-family: 'Cambria', sans-serif;
 }
 
+/*#font {
+  font-family: 'Cambria', sans-serif;
+  font-weight: 400;*/
+
+}
 
 img {border-radius: 1%; padding: 5px;}
 
