--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,12 @@
+
+
+
 /*main containers*/
 
 #main {
   width: 70%;
   margin: auto;
-  background-color: rgba(255,255,255, .45);
+  background-color: rgba(255,255,255, .3);
   height: 100%;
   color: black;
 }
@@ -59,7 +62,7 @@
   list-style:none;
   margin:0;
   padding:0;
-  background-color: #708090;
+  background-color: #2F4F4F;
   z-index: 10;
 
 }
@@ -72,7 +75,7 @@
   -webkit-box-shadow: 1px 3px 5px 1px black;
   box-shadow:         1px 3px 5px 1px black;
   background-color: #131B2A;
-  opacity: 0.7;
+  opacity: 0.8;
   border-radius: 10px;
   display: inline-block;
   margin: 5px;
@@ -94,6 +97,8 @@
 }
 
 #bg {
+  width: 100%
+  height: 100%;
   max-width: 100%;
   max-height: 100%;
   padding-top: 5%;
@@ -150,8 +155,8 @@ body {
   background-position:center;
   text-align: center;
   color: white;
-  font-size: 1em;
-  font-family: 'Cambria', sans-serif;
+  font-size: 1.1em;
+  font-family: 'Lato', sans-serif;
 }
 
 /*#font {
@@ -162,7 +167,6 @@ body {
 
 img {border-radius: 1%; padding: 5px;}
 
-h1 {font-size: 2.3em; text-align: center;}
 
 a {text-decoration: none; color: #2F4F4F;}
 
@@ -186,5 +190,8 @@ hr {border: 0;
     background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
 }
 
+h3 {
+  font-size: 1.1em;
+}
 
 
