--- a/css/app.css
+++ b/css/app.css
@@ -6,7 +6,7 @@
 #main {
   width: 70%;
   margin: auto;
-  background-color: rgba(255,255,255, .3);
+  background-color: rgba(255,255,255, .4);
   height: 100%;
   color: black;
 }
@@ -21,13 +21,18 @@
 }
 
 #top-right {
-  text-align: left;
+  text-align: center;
   margin: 5%;
+}
+
+#about {
+  text-align: left
 }
 
 /*section dividers*/
 
 .section {
+  font-weight: bold;
   box-shadow: 0px 8px 10px -6px black;
   width: 100%;
   clear:both;
@@ -57,7 +62,7 @@
   width: 100%;
   height: 7%;
   font-size: 1.5em;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Cambria', sans-serif;
   position: fixed;
   list-style:none;
   margin:0;
