--- a/css/app.css
+++ b/css/app.css
@@ -198,6 +198,6 @@ h1, h2, h3 {font-weight: normal}
 
 h3 { font-size: 1.1em;}
 
-#resume {margin: auto; border: solid 1px black;}
+#resume {margin: auto; padding-top: 6.5%;}
 
 
