--- a/css/ball.css
+++ b/css/ball.css
@@ -5,19 +5,28 @@
 
 
 #x {
+  text-align: left; 
+  float: right;
+  margin-right: 60%;
+  margin-top: 5%;
 
-
-  padding: 0;
-  width: 50%;
 }
 
 #o {
-    padding: 0;
-  width: 50%;
-  text-align: left; 
-
+    float: right;
+    text-align: left; 
+    margin-top: 5%;
 }
 
 #court {
   float: left;
+
+}
+
+#ball {
+   float: right;
+    text-align: left; 
+    margin-right: 60%;
+    margin-top: 1%
+
 }
