--- a/css/ball.css
+++ b/css/ball.css
@@ -1,7 +1,3 @@
-.o, .x {
-  font-size: 30px;
-  color: red;
-}
 
 
 #court {
@@ -11,10 +7,20 @@
 
 }
 
-#draggables {
+.draggables {
+  font-size: 30px;
+  color: red;
   position: absolute;
   float: right;
+  cursor: move;
+}
+
+.offense {
+  text-align: right;
+}
+
+.defense {
+  text-align: right;
+}
 
   
-
-}
