--- a/css/ball.css
+++ b/css/ball.css
@@ -17,10 +17,12 @@
 
 .offense {
   text-align: right;
+  padding-right: 200px;
 }
 
 .defense {
   text-align: right;
+  padding-right: 200px;
 }
 
   
