--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,22 @@
-/*main */
+/* body / background*/
 
+body {
+  background-repeat: cover;
+  background-color: #708090;
+  background-position:center;
+  text-align: center;
+  color: white;
+  font-size: 1em;
+  font-family: 'Lato', sans-serif;
+}
+
+#bg {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  padding-top: 5%;
+}
 
 #title {
   margin-left: 8%;
@@ -11,12 +28,14 @@
   height: 100%;
 }
 
+/*about me */
+
+
 #top-left {
   float: left;
   width: 35%;
   height: 50%;
   margin-left: 15%;
-
 }
 
 img#me {
@@ -31,28 +50,10 @@ img#me {
   font-size: 1.4em;
   text-align: left;
   opacity: 310%
-
-  /*background-color: rgba(47,79,79, .5);*/
-
 }
 
 
-/*section dividers*/
 
-.section {
-
-  background-color: white;
-  box-shadow: 0px 8px 10px -6px black;
-  width: 100%;
-  color: white;
-  clear:both;
-  margin-top: 2%;
-  padding-top: 3%;  
-  padding-bottom: 3%;
-  background-color: rgba(47,79,79, 1);
-  text-align: center;
-  font-size: 2em;
-}
 
 /*navigation bar*/
 
@@ -84,6 +85,11 @@ img#me {
 
   z-index: 10;
   box-shadow:         1px 3px 10px 6px black;
+}
+
+ul#contacts, ul.stack-list {
+  list-style:none;
+  padding: 0;
 }
 
 /*stack section*/
@@ -118,60 +124,7 @@ img#me {
 
 }
 
-
-ul.bxslider {
-}
-
-#bg {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  padding-top: 5%;
-}
-
-.wiggle {
-  padding: 0;
-  vertical-align: top;
-}
-
-ul#contacts, ul.stack-list {
-  list-style:none;
-  padding: 0;
-}
-
-body {
-  background-repeat: cover;
-  background-color: #708090;
-  background-position:center;
-  text-align: center;
-  color: white;
-  font-size: 1em;
-  font-family: 'Lato', sans-serif;
-}
-
-a {text-decoration: none; color: #DCDCDC;}
-
-a {color: white;}
-a:hover{color: white;}
-
-/*.app-link { font-weight: bold}*/
-
-hr {border: 0;
-    height: 3px;
-    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-}
-
-/*h1, h2, {
-  font-family: Copperplate;
-}*/
-
-
 .slider {
-
   position: relative;
   list-style: none;
   overflow: hidden;
@@ -238,3 +191,26 @@ background: url('../images/next.png') no-repeat 0 0;
 margin-left: 86.5%;
 margin-top: 15%;
 }
+
+.wiggle {
+  padding: 0;
+  vertical-align: top;
+}
+
+
+/* links / misc. */
+
+a {text-decoration: none; color: #DCDCDC;}
+
+a {color: white;}
+a:hover{color: white;}
+
+
+hr {border: 0;
+    height: 3px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+}
+
