--- a/css/app.css
+++ b/css/app.css
@@ -14,11 +14,9 @@ body {
 }
 
 #bg {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  padding-top: 5%;
+
+  /*background: url('/images/ball2.png');*/
+  padding: 2%;
 }
 
 #title {
@@ -30,6 +28,10 @@ body {
 
 
 /*about me */
+
+#bg {
+  position: static;
+}
 
 
 #top-left {
