--- a/css/app.css
+++ b/css/app.css
@@ -1,12 +1,9 @@
 /* body / background*/
 
-
-
+#middle {display: none;}
 
 body {
-  background-repeat: cover;
-  background-color: #708090;
-  background-position:center;
+  background-color: black;
   text-align: center;
   color: white;
   font-size: 1em;
@@ -14,8 +11,6 @@ body {
 }
 
 #bg {
-
-  /*background: url('/images/ball2.png');*/
   padding: 2%;
 }
 
@@ -25,53 +20,26 @@ body {
   padding:0;
 }
 
-
-
 /*about me */
 
-#bg {
-  position: static;
-}
-
-
-#top-left {
-  float: left;
-  width: 39%;
-  height: 42%;
-  margin-left: 4%;
-  margin-top: 2%
-
+#about {
+  max-width: 75%;
+  max-height: 35%;
+  margin-left: 6%;
+  margin-top: 2%;
+  font-size: 1.3em;
 }
 
 img#me {
   border-radius: 2%;
-
-  width: 90%;
   margin-top: 5%;
-
-}
-
-#top-right {
-  float: right;
-  width: 49%;
-  font-size: 1.2em;
-  text-align: left;
-  vertical-align: top;
-  margin-right: 3%;
-  margin-top: 2%
 }
 
 #main {
   margin: auto;
-  height: 320px ;
-  width: 58%;
-  margin-left: 28%;
-  background-color: gray;
-  border: 3px solid black;
-  border-radius: 10px;
+  margin-left: 25%;
+  margin-top: 2%;
 }
-
-
 
 
 /*navigation bar*/
@@ -92,7 +60,7 @@ img#me {
   position: absolute;
   top: 0;
   left: 0;
-  width: 15%;
+  width: 17%;
   height: 100%;
   font-size: 1.8em;
   position: fixed;
@@ -202,14 +170,14 @@ z-index:999;
 }
 
 .rslides_nav.prev{
-background: url('../images/prev.png') no-repeat 0 0;
-margin-left: 23%;
+background: url('../images/prev.gif') no-repeat 0 0;
+margin-left: 20%;
 margin-top: 15%;
 }
 
 .rslides_nav.next{
-background: url('../images/next.png') no-repeat 0 0;
-margin-left: 89.5%;
+background: url('../images/next.gif') no-repeat 0 0;
+margin-left: 92%;
 margin-top: 15%;
 }
 
@@ -225,7 +193,7 @@ margin-top: 15%;
   margin-left: 26%;
   width: 35%;
   height: 80%;
-  z-index: 999;
+  z-index: 10;
   padding-bottom: 10%
 }
 
@@ -244,5 +212,65 @@ hr {border: 0;
     background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
     background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
     background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+}
+
+
+/* Media Queries */
+
+@media (min-width: 1050px) and (max-width: 1200px) {
+
+  .nav {
+    width: 18%;
+    font-size: 1.5em;
+    position: fixed;
+  }
+
+  h1 { font-size: 1.6em; }
+
+  #big { display: none; }
+  #middle { display: inline; width: 700px; margin-left: 5%;}
+
+}
+
+@media (min-width: 700px) and (max-width: 1049px) {
+
+  h1 { font-size: 1.4em; }
+  #about { font-size: 1em; }
+
+  #big { display: none; }
+  #middle { display: inline; width: 600px}
+
+  .nav {
+  width: 18%;
+  font-size: 1.2em;
+  position: fixed;
+  }
+}
+
+@media (min-width: 620px) and (max-width: 699px) {
+
+  h1 { font-size: 1.2em; }
+  #about { font-size: 1em; }
+
+  #big { display: none; }
+  #middle { display: inline; width: 500px}
+
+  .nav {
+  width: 18%;
+  font-size: 1.2em;
+  position: fixed;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 619px) {
+
+  h1 { font-size: 1.2em; }
+  #about { font-size: 1em; }
+
+  .nav {
+  width: 20%;
+  font-size: 1.1em;
+  position: fixed;
+  }
 }
 
